# UiT_FYS-8603

./: .gitignore  AJIVE_CC+MLO_cancer.ipynb  AJIVE_cancer+density.ipynb  Ajive_disection.ipynb  Dockerfile  env_test.py  hello.py  job.yaml  job_script.sh  main.py  mirai.ipynb  networks_playground.ipynb  playground.ipynb  pyproject.toml  resize_png.py  synthetic_ajive.ipynb  synthetic_data.ipynb  train_1vf.py  train_2v1b.py  train_4v2b.py  train_4vf.py  train_f.py  train_synt.py  vinDR_annot.ipynb
.github/workflows/: docker-push.yml
DIVAS/: DIVAS_PYTHON_USAGE.md  DemoScript.m  README.md  R_DIVAS.R
Report_files/: jan.xlsx
python_packages/: __init__.py
python_packages/jive/: AJIVE.py  PCA.py  ajive_fig2.py  random_direction.py  utils.py  wedin_bound.py
python_packages/jive/lazymatpy/: convert2scipy.py  interface.py
python_packages/jive/tests/: test_AJIVE.py  test_PCA.py  utils.py
python_packages/jive/viz/: block_visualization.py  diagnostic_plot.py  jive_visualization.py  pca_scores_plot.py  scatter_plot_save_selected.py  singular_values.py  viz.py
python_packages/mvdr/: linalg_utils.py  principal_angles.py  utils.py
python_packages/mvdr-0.0.1-py3.12.egg/EGG-INFO/: PKG-INFO  (+3 more)
python_packages/ya_pca/: PCA.py  linalg_utils.py  svd_missing.py  toy_data.py  utils.py  viz.py
src/: Dataloaders.py  Multiview_cancer_models.py  __init__.py  py_divas.py
src/Dataloaders/: All_images.py  Breast_Cancer.py  Patient_Cancer.py  Synthetic_2v.py  View_Cancer.py
src/Models/: Multiview_cancer_models.py  Separate_view_model.py  Separate_view_models.py  Two_view_grey_models.py  mirai_pretrained.py
(+38 files in other folders)
