[project]
name = "fys-8603"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.3",
    "imblearn>=0.0",
    "isort>=6.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "mvlearn>=0.4.1",
    "numba==0.61.0",
    "numpy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydicom>=3.0.1",
    "pytorch-lightning>=2.5.0.post0",
    "ruff>=0.9.6",
    "scikit-dimension>=0.3.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.6",
]
